kubectl/dice-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dice-java
  template:
    metadata:
      labels:
        app: dice-java
    spec:
      containers:
        - name: dice-java
          image: ghcr.io/apeirora/audit-log-poc-for-otel/dice-java:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: audit-logs
              mountPath: /var/log/audit
      volumes:
        - name: audit-logs
          emptyDir: {} # Survives container crashes, not pod restarts
---
apiVersion: v1
kind: Service
metadata:
  name: dice-java
spec:
  selector:
    app: dice-java
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30382
  type: NodePort
